VP:design chnages for urban-tap

--- a/public/style.css
+++ b/public/style.css
@@ -7,7 +7,7 @@ body {
 }
 .card-gray {
   background-color: #f3f6fa !important;
-  border-radius: 20px !important;
+  border-radius: 30px !important;
 }
 .h1-card {
   padding-bottom: 50px !important;
@@ -98,10 +98,23 @@ body {
   nav {
     width: 87% !important;
     margin-left: 22px !important;
+    height: 68px !important;
     gap: 40px !important;
+    padding-left: 2rem !important;
   }
   .join-btn {
     margin-left: 0px !important;
+    width: 96px !important;
+  }
+  .hero-img{
+    width: 273px !important;
+  }
+  .heroimg-div{
+    padding-top: 14px !important;
+  }
+  .mobile-pack>h1{
+    padding-bottom: 6px !important;
+    line-height: 33.6px !important;
   }
   .hero {
     padding-top: 134px !important;
@@ -161,4 +174,23 @@ body {
   .awssld--organic-arrows{
     height: 450px !important;
   }
+  .card-div h1{
+    font-size: 17px !important;
+    line-height: 21.25px !important;
+    font-weight: 600 !important;
+    padding-bottom: 6px !important;
+  }
+
+  .card-div p{
+    font-size: 16px;
+    line-height: 20px;
+    font-weight: 400;
+
+  }
+  /* .card-img{
+    width: 80px !important;
+    height: 80px !important;
+    background: #FFFFFF;
+    border-radius: 50%;
+  } */
 }
